enhanced search by colour, added csv export option, now box number click search inline

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         </button>
       </div>
 
+      <div class="text-right mb-4 hidden" id="csvExportContainer">
+        <button id="csvExportBtn" class="px-4 py-2 bg-green-600 text-white text-sm rounded shadow hover:bg-green-700">
+            ⬇️ Download CSV
+        </button>
+      </div>
+
       <!-- Results -->
       <div id="results" class="space-y-4"></div>
     </div>
