changed scan icon, upon box number click now it auto-scrolls, only one box open at a time

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         />
         <button
           id="scanBtn"
-          class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
           title="Scan Barcode/QR"
+          class="bg-blue-500 p-2 rounded-md hover:bg-blue-600"
         >
-          📷
+          <img src="barcode-scan-icon.png" alt="Scan" class="w-6 h-6" />
         </button>
       </div>
 
