restored old camera symbol icon

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           class="flex-1 px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400"
         />
         <button
-          id="scanBtn"
-          title="Scan Barcode/QR"
-          class="bg-blue-500 p-2 rounded-md hover:bg-blue-600"
-        >
-          <img src="barcode-scan-icon.png" alt="Scan" class="w-6 h-6" />
+            id="scanBtn"
+            class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
+            title="Scan Barcode/QR"
+            >
+            📷
         </button>
       </div>
 
