--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Product Box Search</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
   <body class="bg-gray-50 min-h-screen text-gray-800 p-4">
-    <div class="max-w-2xl mx-auto">
+    <div class="max-w-7xl mx-auto">
       <h1 class="text-2xl font-semibold mb-4 text-center">📦 Product-Box Search</h1>
 
       <div class="flex items-center gap-2 mb-6">
@@ -19,11 +20,11 @@
           class="flex-1 px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-400"
         />
         <button
-            id="scanBtn"
-            class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
-            title="Scan Barcode/QR"
-            >
-            📷
+          id="scanBtn"
+          class="p-2 bg-blue-500 text-white rounded-md hover:bg-blue-600"
+          title="Scan Barcode/QR"
+        >
+          🔲
         </button>
       </div>
 
@@ -38,16 +39,26 @@
         </button>
       </div>
 
-      <div class="text-right mb-4 hidden" id="csvExportContainer">
-        <button id="csvExportBtn" class="px-4 py-2 bg-green-600 text-white text-sm rounded shadow hover:bg-green-700">
-            ⬇️ Download CSV
+      <!-- Export Buttons -->
+      <div id="csvExportContainer" class="mb-4 hidden flex flex-col sm:flex-row sm:items-center justify-end gap-2">
+        <button
+          id="csvExportBtn"
+          class="px-4 py-2 bg-green-600 text-white text-sm rounded shadow hover:bg-green-700"
+        >
+          ⬇️ Download CSV
+        </button>
+        <button
+          id="pdfExportBtn"
+          class="px-4 py-2 bg-purple-600 text-white text-sm rounded shadow hover:bg-purple-700"
+        >
+          🧾 Download PDF
         </button>
       </div>
 
-      <!-- Results -->
-      <div id="results" class="space-y-4"></div>
+      <!-- Results Grid -->
+      <div id="results" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
     </div>
 
     <script src="script.js"></script>
   </body>
-</html> 
+</html>
